crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@236.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange(numrange(1,2)) &< nummultirange(numrange(3,4));"
---
SelectStmt@0..68
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..65
    AExpr@7..65
      FuncCall@7..33
        Ident@7..20 "nummultirange"
        Ascii40@20..21 "("
        FuncCall@21..33
          Ident@21..29 "numrange"
          Ascii40@29..30 "("
          AConst@30..31
            Iconst@30..31 "1"
          Ascii44@31..32 ","
          AConst@32..33
            Iconst@32..33 "2"
      Ascii41@33..34 ")"
      Ascii41@34..35 ")"
      Whitespace@35..36 " "
      Op@36..38 "&<"
      Whitespace@38..39 " "
      FuncCall@39..65
        Ident@39..52 "nummultirange"
        Ascii40@52..53 "("
        FuncCall@53..65
          Ident@53..61 "numrange"
          Ascii40@61..62 "("
          AConst@62..63
            Iconst@62..63 "3"
          Ascii44@63..64 ","
          AConst@64..65
            Iconst@64..65 "4"
  Ascii41@65..66 ")"
  Ascii41@66..67 ")"
  Ascii59@67..68 ";"

