crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@239.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange(numrange(3.5,6)) &< nummultirange(numrange(3,4));"
---
SelectStmt@0..70
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..67
    AExpr@7..67
      FuncCall@7..35
        Ident@7..20 "nummultirange"
        Ascii40@20..21 "("
        FuncCall@21..35
          Ident@21..29 "numrange"
          Ascii40@29..30 "("
          AConst@30..33
            Fconst@30..33 "3.5"
          Ascii44@33..34 ","
          AConst@34..35
            Iconst@34..35 "6"
      Ascii41@35..36 ")"
      Ascii41@36..37 ")"
      Whitespace@37..38 " "
      Op@38..40 "&<"
      Whitespace@40..41 " "
      FuncCall@41..67
        Ident@41..54 "nummultirange"
        Ascii40@54..55 "("
        FuncCall@55..67
          Ident@55..63 "numrange"
          Ascii40@63..64 "("
          AConst@64..65
            Iconst@64..65 "3"
          Ascii44@65..66 ","
          AConst@66..67
            Iconst@66..67 "4"
  Ascii41@67..68 ")"
  Ascii41@68..69 ")"
  Ascii59@69..70 ";"

