crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@24.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{(,)}'::textmultirange;"
---
SelectStmt@0..31
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..30
    TypeCast@7..30
      AConst@7..14
        Sconst@7..14 "'{(,)}'"
      Typecast@14..16 "::"
      TypeName@16..30
        Ident@16..30 "textmultirange"
  Ascii59@30..31 ";"

